feat: update database configuration and enhance outbox message handling

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       TZ: "Asia/Tehran"
       POSTGRES_USER: gbox
       POSTGRES_PASSWORD: gbox
-      POSTGRES_DB: postgres
+      POSTGRES_DB: gbox
     ports:
       - "5432:5432"
     volumes:
